--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,41 @@
 <thf-page-default t-title="Thf Range">
-    <thf-range></thf-range>
+        
+    
+    <div class="thf-row">
+        <h3>Totvs Range Basic</h3>
+        <thf-range style="margin-bottom: 25px;"
+            class="thf-lg-12"
+            t-label="Label"
+            t-name="name"
+            t-minValue="0"
+            t-maxValue="100"
+            t-interval="0.25">
+        </thf-range>
+    </div>
+
+    <div class="thf-row">
+        <h3>Totvs Range Labs</h3>
+        <thf-range style="margin-bottom: 25px;"
+            class="thf-lg-12"
+            t-label="Label"
+            t-name="name"
+            t-minValue="0"
+            t-maxValue="100"
+            t-interval="0.25">
+        </thf-range>
+    </div>
+
+    <div class="thf-row">
+        <h3>Totvs Range Filter</h3>
+        <thf-range style="margin-bottom: 25px;"
+            class="thf-lg-12"
+            t-label="Label"
+            t-name="name"
+            t-minValue="0"
+            t-maxValue="100"
+            t-interval="0.25">
+        </thf-range>
+    </div>
+
 </thf-page-default>
 
