--- a/src/app/components/thf-range/thf-range.component.html
+++ b/src/app/components/thf-range/thf-range.component.html
@@ -1,3 +1,38 @@
-<p>
-  thf-range works!
-</p>
+<div class="thf-field-container">
+  <div class="thf-field-container-title"> 
+    <span class="thf-field-title">{{label}}</span>
+    <span *ngIf="!required" class="thf-field-optional thf-pull-right">(Opcional)</span>
+  </div>
+  <div *ngIf="help!==''" class="thf-field-help">{{help}}</div>
+  <div class="thf-field-container-input">
+    <div [attr.name]="name" class="thf-range-container">
+      <span *ngIf="indicators" class="thf-range-minor-text thf-range-interval-text" [innerHtml]="minorSelectedValue"></span>
+      <div class="thf-range-slider">
+        <input 
+          class="thf-range-slider-bar"
+          type="range" 
+          [min]="minValue" 
+          [max]="maxValue" 
+          id="myRange" 
+          [value]="initialValue" 
+          [step]="interval" 
+          [disabled]="disabled"
+          (input)="eventOnInput($event)"
+          [(ngModel)]="initialValue"/>
+        <input 
+          type="range" 
+          class="thf-range-slider-bar"
+          [min]="minValue" 
+          [max]="maxValue" 
+          id="mySecondRange" 
+          [value]="finalValue" 
+          [step]="interval"
+          [disabled]="disabled"
+          (input)="eventOnInput($event)"
+          [(ngModel)]="finalValue"/>
+        <div class="thf-range-slider-bar-selected thf-range-slider-bar" [style.width.%]="intervalSelected" [style.left.%]="intervalBeforeSelected"></div>
+      </div>
+      <span *ngIf="indicators" class="thf-range-major-text thf-range-interval-text" [innerHtml]="majorSelectedValue"></span>
+    </div>
+  </div>
+</div>
