criação dos samples

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,8 @@
 <thf-page-default t-title="Thf Range">
         
-    
-    <div class="thf-row">
-        <h3>Totvs Range Basic</h3>
-        <thf-range style="margin-bottom: 25px;"
-            class="thf-lg-12"
-            t-label="Label"
-            t-name="name"
-            t-minValue="0"
-            t-maxValue="100"
-            t-interval="0.25">
-        </thf-range>
-    </div>
-
-    <div class="thf-row">
-        <h3>Totvs Range Labs</h3>
-        <thf-range style="margin-bottom: 25px;"
-            class="thf-lg-12"
-            t-label="Label"
-            t-name="name"
-            t-minValue="0"
-            t-maxValue="100"
-            t-interval="0.25">
-        </thf-range>
-    </div>
-
-    <div class="thf-row">
-        <h3>Totvs Range Filter</h3>
-        <thf-range style="margin-bottom: 25px;"
-            class="thf-lg-12"
-            t-label="Label"
-            t-name="name"
-            t-minValue="0"
-            t-maxValue="100"
-            t-interval="0.25">
-        </thf-range>
-    </div>
+    <sample-thf-range-basic></sample-thf-range-basic>
+    <sample-thf-range-labs></sample-thf-range-labs>
+    <sample-thf-range-use-case></sample-thf-range-use-case>
 
 </thf-page-default>
 
