--- a/src/app/components/thf-range/samples/sample-basic/sample-thf-range-basic.component.html
+++ b/src/app/components/thf-range/samples/sample-basic/sample-thf-range-basic.component.html
@@ -1,9 +1,9 @@
-<div class="thf-row">
+<div class="thf-row sample-container">
     <h3>Totvs Range Basic</h3>
     <thf-range style="margin-bottom: 25px;"
         class="thf-lg-12"
         t-label="Label"
-        t-name="name"
+        name="name"
         t-minValue="0"
         t-maxValue="100"
         t-interval="0.25">
