--- a/src/app/components/thf-range/samples/sample-use-case/sample-thf-range-use-case.component.html
+++ b/src/app/components/thf-range/samples/sample-use-case/sample-thf-range-use-case.component.html
@@ -1,12 +1,34 @@
-<div class="thf-row">
-        <h3>Totvs Range Use Case</h3>
-        <thf-range style="margin-bottom: 25px;"
+<div class="thf-row sample-container">
+        
+    <div class="thf-row">
+        
+        <h3 class="thf-lg-12">Totvs Range - Filter by price</h3>
+        
+        <thf-range
             class="thf-lg-12"
-            t-label="Label"
-            t-name="name"
-            t-minValue="0"
-            t-maxValue="100"
-            t-interval="0.25">
+            name="rangePrice"
+            t-label="Price"
+            t-help="Filter data by price"
+            t-minValue="200"
+            t-maxValue="5000"
+            t-interval="0.50"
+            t-money
+            t-moneySymbol="$"
+            [t-indicators]="true"
+            (t-change)="filterProducts($event)">
         </thf-range>
+
     </div>
+
+    <div class="thf-row">
+
+        <div *ngFor="let product of filteredProducts" class="thf-md-2 product-container">
+            <img [src]="'../../../../../assets/' + product.image + '.jpg'" [alt]="product.description" />
+            <span>{{product.description}}</span><br>
+            <span>$ {{(product.price).toFixed(2)}}</span>
+        </div>
+
+    </div>
+
+</div>
     
