--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.sample-container {
+    background: #fff;
+    box-shadow: 0 10px 6px -6px rgba(0,0,0,.2);
+    -moz-box-shadow: 0 10px 6px -6px rgba(0,0,0,.2);
+    -webkit-box-shadow: 0 10px 6px -6px rgba(0,0,0,.2);
+    margin: 40px auto;
+    margin-top: 5px;
+    min-height: 100px;
+    padding: 15px;
+    position: relative;
+}
